# rpg

./: CMakeLists.txt  Event.h  conanfile.txt  main.cpp
Components/: SpriteComponent.h
Engine/: AnimationSystem.cpp  AnimationSystem.h  AssetManager.cpp  AssetManager.h  Collider.cpp  Collider.h  CollisionSystem.cpp  CollisionSystem.h  Components.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptManager.cpp  ScriptManager.h  TextRenderingSystem.cpp  TextRenderingSystem.h  Texture.cpp  Texture.h  Vector2.h  cute_c2.h
Engine/Components/: AnimationComponent.cpp  AnimationComponent.h  CollisionComponent.h  PhysicsComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.h  TransformComponent.h  VelocityComponent.h
Engine/EntitySystem/: ClassTypeId.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EventDispatcher.cpp  EventDispatcher.h  Fastdelegate.h  System.cpp  System.h  Time.cpp  Time.h
scripts/: game.lua  inputSystem.lua  movementSystem.lua  playerSystem.lua  rpg.lua  stateManager.lua
